Fixed 5-day forecast card spacing

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     font-size: 10px;
 }
 
+.hidden {
+    display: none;
+}
+
 #city-button-element {
     margin-top: 10px;
 }
